Archive/d0259a1b76c6d46dd0c09fd461808bea-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:43:38: error: type/value mismatch at argument 1 in template parameter list for ‘template<class T> struct holder’
     holder<[](int a){ style_a_x(a); }> held_value;
                                      ^
main.cpp:43:38: error:   expected a type, got ‘<lambda closure object>uses_holder_for_style_a_x::__lambda0{}’
